@@ -28,8 +28,8 @@ import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.nonNull;
 import static uk.gov.hmcts.reform.civil.enums.DocumentHearingType.getContentText;
@@ -113,7 +113,7 @@ public class HmcDataUtils {
                     HearingDay datesFromHearingDay = new HearingDay()
                         .setHearingStartDateTime(convertFromUTC(hearingDay.getHearingStartDateTime()))
                         .setHearingEndDateTime(convertFromUTC(hearingDay.getHearingEndDateTime()));
-                    if (!serviceData.getHearingLocation().equals(hearingDay.getHearingVenueId())
+                    if (!Objects.equals(serviceData.getHearingLocation(), hearingDay.getHearingVenueId())
                         || !serviceData.getDays().contains(datesFromHearingDay)) {
                         return true;
                     }
@@ -200,8 +200,8 @@ public class HmcDataUtils {
      */
     public static Integer getTotalHearingDurationInMinutes(HearingGetResponse hearing) {
         return hearing.getHearingResponse().getHearingDaySchedule().stream()
-            .map(day -> getHearingDayMinutesDuration(day))
-            .reduce((aac, day) -> aac + day).orElse(null);
+            .map(HmcDataUtils::getHearingDayMinutesDuration)
+            .reduce(Integer::sum).orElse(null);
     }
 
     /**
@@ -240,7 +240,7 @@ public class HmcDataUtils {
      */
     private static String concatWithAnd(List<String> strings) {
         return strings.stream()
-            .filter(string -> string != null && !string.equals(""))
+            .filter(string -> string != null && !string.isEmpty())
             .reduce((acc, displayText) -> String.format("%s and %s", acc, displayText))
             .orElse("");
     }
@@ -255,7 +255,7 @@ public class HmcDataUtils {
     private static String concatWithWelshAnd(List<String> strings, Boolean vowelStart) {
         String andText = vowelStart ? "ac" : "a";
         return strings.stream()
-            .filter(string -> string != null && !string.equals(""))
+            .filter(string -> string != null && !string.isEmpty())
             .reduce((acc, displayText) -> String.format("%s %s %s", acc, andText, displayText))
             .orElse("");
     }
@@ -347,18 +347,16 @@ public class HmcDataUtils {
 
     public static boolean includesVideoHearing(HearingsResponse hearings) {
         return hasHearings(hearings)
-                && hearings.getCaseHearings().stream()
-                .filter(HmcDataUtils::includesVideoHearing).count() > 0;
+                && hearings.getCaseHearings().stream().anyMatch(HmcDataUtils::includesVideoHearing);
     }
 
     private static boolean includesVideoHearing(HearingDaySchedule hearingDay) {
-        return hearingDay.getAttendees().stream().filter(
-            attendee -> attendee.getHearingSubChannel() != null
-                && attendee.getHearingSubChannel().equals(VIDCVP)).count() > 0;
+        return hearingDay.getAttendees().stream().anyMatch(attendee -> attendee.getHearingSubChannel() != null
+            && attendee.getHearingSubChannel().equals(VIDCVP));
     }
 
     private static boolean includesVideoHearing(List<HearingDaySchedule> schedule) {
-        return schedule.stream().filter(HmcDataUtils::includesVideoHearing).count() > 0;
+        return schedule.stream().anyMatch(HmcDataUtils::includesVideoHearing);
     }
 
     private static boolean includesVideoHearing(CaseHearing caseHearing) {
@@ -379,11 +377,11 @@ public class HmcDataUtils {
                         .filter(party -> party.getIndividualDetails() != null)
                         .map(party -> StringUtils.joinNonNull(" ", party.getIndividualDetails().getFirstName(),
                                 party.getIndividualDetails().getLastName()))
-                ).collect(Collectors.toList());
+                ).toList();
     }
 
     private static String concatenateNames(List<String> names) {
-        return nonNull(names) && names.size() > 0 ? org.apache.commons.lang.StringUtils.join(names, "\n") : null;
+        return nonNull(names) && !names.isEmpty() ? org.apache.commons.lang.StringUtils.join(names, "\n") : null;
     }
 
     public static String getInPersonAttendeeNames(HearingGetResponse hearing) {
@@ -416,7 +414,7 @@ public class HmcDataUtils {
         List<LocationRefData> locations = locationRefDataService.getHearingCourtLocations(bearerToken);
         var matchedLocations =  locations.stream().filter(loc -> loc.getEpimmsId().equals(venueId)).toList();
         if (!matchedLocations.isEmpty()) {
-            return matchedLocations.get(0);
+            return matchedLocations.getFirst();
         } else {
             throw new IllegalArgumentException("Hearing location data not available for hearing " + hearingId + " venueId " + venueId);
         }
